noTicket/fixingOverlappignStyle-Samuil

--- a/components/_helper_components/listpage/default.scss
+++ b/components/_helper_components/listpage/default.scss
@@ -186,6 +186,10 @@
 
 .c-staffBioPage {
 
+  .c-section {
+    display: block;
+  }
+
   .c-rightRail {
     @include breakpoint(tablet) {
       display: none;
